samples/_failures_safe/1761160986_9d3b75_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8a5a2a21.c: In function ‘process_event’:
./samples/SAFE/__tmp_8a5a2a21.c:151:5: error: expected expression at end of input
  151 |     if (sm == NULL) return -
      |     ^~
./samples/SAFE/__tmp_8a5a2a21.c:151:5: error: expected declaration or statement at end of input
